--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "hack-team-separator",
-  "version": "1.0.0",
-  "description": "Generate PDF documents for judges containing which teams to judge, when, and where.",
-  "main": "index.js",
+  "version": "0.1.0",
   "repository": "git@github.com:hackohio/hack-team-separator.git",
   "author": "hackohio",
-  "license": "MIT",
+  "private": true,
   "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "2.0.4",
     "pdfkit": "^0.8.3"
-  }
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
