CSV upload and conversion working. UI almost done

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
+    "csvtojson": "^2.0.8",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.0",
@@ -47,6 +48,7 @@
     "react-bulma-components": "2.1.0",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
+    "react-file-reader": "^1.1.4",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
