--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
+    "pureimage": "^0.1.6",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-bulma-components": "2.1.0",
